--- a/Movies.Application/Movies.Application.csproj
+++ b/Movies.Application/Movies.Application.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+ <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+
   </ItemGroup>
 
 </Project>
